# pokerstove

src/: CMakeLists.txt
src/lib/pokerstove/peval/: CMakeLists.txt
src/lib/pokerstove/peval-c/: CMakeLists.txt  evaluate.cpp  evaluate.h  evaluate.test.cpp
